--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: grafana
     code: Grafana
-    notify: bkoshy@ecloudcontrol.com
+    notify: mmushraf@ecloudcontrol.com
     
 build:
     version: 7.0
@@ -11,7 +11,7 @@ build:
     image_template: grafana-7.0
     
 deploy:
-    context: alpha/DEV
+    context: musharaf6461/DEV
     type: statefulset
     replicas: 1
     port:
@@ -33,10 +33,10 @@ properties:
     GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: 
       vault: GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET
     GF_AUTH_GENERIC_OAUTH_SCOPES: openid profile email  
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://appz.038ecc66.lowtouch.cloud/openid/authorize 
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: https://appz.038ecc66.lowtouch.cloud/openid/token 
-    GF_AUTH_GENERIC_OAUTH_API_URL: https://appz.038ecc66.lowtouch.cloud/openid/userinfo 
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: https://appz.038c839.lowtouch.cloud/openid/authorize 
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: https://appz.038c839.lowtouch.cloud/openid/token 
+    GF_AUTH_GENERIC_OAUTH_API_URL: https://appz.038c839.lowtouch.cloud/openid/userinfo 
     GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH: anyname
     GF_AUTH_GENERIC_OAUTH_ROLE_ATTRIBUTE_PATH: contains(roles[*], 'admin') && 'Admin' || 'Viewer'
-    GF_SERVER_ROOT_URL: https://alpha-dev-grafana-7-0.038ecc66.lowtouch.cloud
+    GF_SERVER_ROOT_URL: https://musharaf6461-dev-grafana-7-0.038c839.lowtouch.cloud
     revision: 52
