--- a/appz.yml
+++ b/appz.yml
@@ -11,7 +11,7 @@ build:
     image_template: grafana-7.0
     
 deploy:
-    context: musharaf6461/DEV
+    context: mushraf6461/DEV
     type: statefulset
     replicas: 1
     port:
